--- a/goonsay/templates/base.html
+++ b/goonsay/templates/base.html
@@ -1,17 +1,48 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
-<head>
-    <title>{% block head_title %}{% endblock %}</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-</head>
-<body>
+    <head>
+        <title>{% block title %}{% endblock %}</title>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-<div id="container">
-    {% block content %}
-    {% endblock %}
-</div>
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />
+    </head>
+    <body>
+        <div id="header">
+            <div id="header_inner" class="fluid">
 
-</body>
+                <div id="logo">
+                    <h1><span>Nonzero</span>1.0</h1>
+                    <h2>By NodeThirtyThree Design</h2>
+                </div>
+
+                <div id="menu">
+                    <ul>
+                        <li><a href="#" class="active">Blog</a></li>
+                        <li><a href="#">About Me</a></li>
+                        <li><a href="#">Photos</a></li>
+                        <li><a href="#">Resources</a></li>
+                        <li><a href="#">Contact Me</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </div>
+
+        <div id="main">
+            <div id="main_inner" class="fluid">
+                <div id="primaryContent_columnless">
+
+                    <div id="columnA_columnless">
+                    </div>
+                </div>
+
+                <br class="clear">
+
+            </div>
+        </div>
+
+        <div id="footer" class="fluid">
+            Copyright &copy; 2006 Your Website. All rights reserved. Design by <a href="http://www.nodethirtythree.com/">NodeThirtyThree Design</a>.
+        </div>
+    </body>
 </html>
