--- a/goonsay/templates/base.html
+++ b/goonsay/templates/base.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+{% load navbar %}<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>{% block title %}{% endblock %}</title>
+        <title>:goonsay: {% block title %}{% endblock %}</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />
@@ -16,14 +16,17 @@
 
                 {% block menu %}
                 <div id="menu">
+                    {% navbars %}
+                    {% comment %}
                     <ul>
                         <li><a href="#" class="active">Home</a></li>
                         <li><a href="#">Latest</a></li>
                         <li><a href="#">Random</a></li>
                         <li><a href="#">Top</a></li>
-                        <li><a href="#">Add GoonSay</a></li>
+                        <li><a href="#">Add</a></li>
                         <li><a href="#">Search</a></li>
                     </ul>
+                    {% endcomment %}
                 </div>
                 {% endblock menu %}
 
@@ -40,7 +43,7 @@
                     </div>
                 </div>
 
-                <br class="clear">
+                <br class="clear" />
 
             </div>
         </div>
