voting now uses ajax where available

--- a/goonsay/apps/goonsay/templates/goonsay/goonsay_detail.html
+++ b/goonsay/apps/goonsay/templates/goonsay/goonsay_detail.html
@@ -6,6 +6,51 @@
 {% block extra_js %}
 <script type="text/javascript">
     $(document).ready(function(){
+        var fadeout_delay = 5000;
+        $('#vote-up').click(function(){
+            $.ajax({
+                'url': '{% url goonsay:voting object_id=object.pk direction='up' %}',
+                'type': 'POST',
+                'dataType': 'json',
+                'success': function(data){
+                    if( data.success ){
+                        $('#score-value').text(data.score.score);
+                        $('#vote-msg').text('Thanks for Voting!').fadeIn('fast');
+                        setTimeout(function(){
+                            $('#vote-msg').fadeOut('slow');
+                        }, fadeout_delay);
+                    } else {
+                        $('#vote-msg').text(data.error_message).fadeIn('fast');
+                        setTimeout(function(){
+                            $('#vote-msg').fadeOut('slow')
+                        }, fadeout_delay);
+                    }
+                }
+                });
+            return false;
+        });
+        $('#vote-down').click(function(){
+            $.ajax({
+                'url': '{% url goonsay:voting object_id=object.pk direction='down' %}',
+                'type': 'POST',
+                'dataType': 'json',
+                'success': function(data){
+                    if( data.success ){
+                        $('#score-value').text(data.score.score);
+                        $('#vote-msg').text('Thanks for Voting!').fadeIn('fast');
+                        setTimeout(function(){
+                            $('#vote-msg').fadeOut('slow');
+                        }, fadeout_delay);
+                    } else {
+                        $('#vote-msg').text(data.error_message).fadeIn('fast');
+                        setTimeout(function(){
+                            $('#vote-msg').fadeOut('slow');
+                        }, fadeout_delay);
+                    }
+                }
+                });
+            return false;
+        });
     });
 </script>
 {% endblock %}
@@ -21,11 +66,12 @@
     </form>
 {% endif %}
 <div class="goonsay">
+    <div id="vote-msg"></div>
     <div class="title">{{ object }}
         <div class="voting">
-            <a class="up" title="Vote {{ object }} Up" href="{% url goonsay:voting object_id=object.pk direction='up' %}">+</a>
-            ({{ score.score }}) 
-            <a class="down" title="Vote {{ object }} Down" href="{% url goonsay:voting object_id=object.pk direction='down' %}">-</a>
+            <a id="vote-up" class="up" title="Vote {{ object }} Up" href="{% url goonsay:voting object_id=object.pk direction='up' %}">+</a>
+            (<span id="score-value">{{ score.score }}</span>) 
+            <a id="vote-down" class="down" title="Vote {{ object }} Down" href="{% url goonsay:voting object_id=object.pk direction='down' %}">-</a>
         </div>
     </div>
     <blockquote>
