--- a/goonsay/templates/base.html
+++ b/goonsay/templates/base.html
@@ -5,6 +5,10 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
         <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />
+
+        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+        {% block extra_js %}
+        {% endblock extra_js %}
     </head>
     <body>
         <div id="header">
