--- a/goonsay/apps/goonsay/templates/goonsay/goonsay_detail.html
+++ b/goonsay/apps/goonsay/templates/goonsay/goonsay_detail.html
@@ -22,7 +22,7 @@
     <div class="title">{{ object }}
         <div class="voting">
             <a class="vote-up" title="Vote {{ object }} Up" href="{% url goonsay:voting object_id=object.pk direction='up' %}">+</a>
-            (<span id="score-value">{{ score.score }}</span>) 
+            (<span class="score-value">{{ score.score }}</span>) 
             <a class="vote-down" title="Vote {{ object }} Down" href="{% url goonsay:voting object_id=object.pk direction='down' %}">-</a>
         </div>
     </div>
