finished rewriting vote.js to be generic

--- a/goonsay/apps/goonsay/templates/goonsay/goonsay_detail.html
+++ b/goonsay/apps/goonsay/templates/goonsay/goonsay_detail.html
@@ -18,12 +18,11 @@
     </form>
 {% endif %}
 <div class="goonsay">
-    <div id="vote-msg"></div>
     <div class="title">{{ object }}
         <div class="voting">
-            <a class="vote-up" title="Vote {{ object }} Up" href="{% url goonsay:voting object_id=object.pk direction='up' %}">+</a>
+            <a class="vote-link" title="Vote {{ object }} Up" href="{% url goonsay:voting object_id=object.pk direction='up' %}">+</a>
             (<span class="score-value">{{ score.score }}</span>) 
-            <a class="vote-down" title="Vote {{ object }} Down" href="{% url goonsay:voting object_id=object.pk direction='down' %}">-</a>
+            <a class="vote-link" title="Vote {{ object }} Down" href="{% url goonsay:voting object_id=object.pk direction='down' %}">-</a>
         </div>
     </div>
     <blockquote>
