added text to say that a goonsay is awaiting approval

--- a/goonsay/static/css/style.css
+++ b/goonsay/static/css/style.css
@@ -492,7 +492,8 @@ div.voting { display: inline; float: right; }
 
 div#vote-msg { text-align: center; display: none; }
 
-div.vote-msg { display: inline; float: right; margin-right: 50px; display: none; }
+div.vote-msg { display: inline; float: right; margin-right: 40px; display: none; }
 div.vote-msg .success { color: #390; }
 div.vote-msg .error { color: #D90000; }
 
+span.moderated { color: #D90000; padding-left: 10px; }
