--- a/goonsay/apps/goonsay/templates/goonsay/goonsay_detail.html
+++ b/goonsay/apps/goonsay/templates/goonsay/goonsay_detail.html
@@ -19,6 +19,9 @@
 {% endif %}
 <div class="goonsay">
     <div class="title">{{ object }}
+        {% ifequal object.moderation_object.moderation_status 0 %}
+        <span class="moderated">Awaiting Approval</span>
+        {% endifequal %}
         <div class="voting">
             <a class="vote-link" title="Vote {{ object }} Up" href="{% url goonsay:voting object_id=object.pk direction='up' %}">+</a>
             (<span class="score-value">{{ score.score }}</span>) 
