added a stats block to the bottom of the page

--- a/goonsay/static/css/style.css
+++ b/goonsay/static/css/style.css
@@ -497,3 +497,5 @@ div.vote-msg .success { color: #390; }
 div.vote-msg .error { color: #D90000; }
 
 span.moderated { color: #D90000; padding-left: 10px; }
+
+div#footer .stats { float: right; }
