--- a/goonsay/templates/base.html
+++ b/goonsay/templates/base.html
@@ -43,6 +43,10 @@
                 <div id="primaryContent_2columns">
                     <div id="columnA_2columns">
                         {% block content %}
+                        <div id="home-left">
+                            <p><strong>Welcome!</strong> Browse away to your amusement, and feel free to add some :goonsay: yourself.</p>
+                            <p>If you like or dislike a :goonsay:, vote with the + and - links. If you feel that the quote doesn't deserve to be in the database at all, click its [X] link next to it; while the quote will not be removed from the database immediately, it will be resubmitted for review, and it is possible that it will be removed.</p>
+                        </div>
                         {% endblock content %}
                     </div>
                 </div>
