redid the front site text

--- a/goonsay/static/css/style.css
+++ b/goonsay/static/css/style.css
@@ -500,4 +500,4 @@ span.moderated { color: #D90000; padding-left: 10px; }
 
 div#footer .stats { float: right; }
 
-div#home-left { width: 80%; margin: auto; }
+div.home-goonsay { widtH: 90%; }
