--- a/goonsay/templates/base.html
+++ b/goonsay/templates/base.html
@@ -43,9 +43,15 @@
                 <div id="primaryContent_2columns">
                     <div id="columnA_2columns">
                         {% block content %}
-                        <div id="home-left">
-                            <p><strong>Welcome!</strong> Browse away to your amusement, and feel free to add some :goonsay: yourself.</p>
-                            <p>If you like or dislike a :goonsay:, vote with the + and - links. If you feel that the quote doesn't deserve to be in the database at all, click its [X] link next to it; while the quote will not be removed from the database immediately, it will be resubmitted for review, and it is possible that it will be removed.</p>
+                        <div class="goonsay home-goonsay">
+                            <blockquote> 
+                                <p>
+                                    <strong>Welcome!</strong> Browse away to your amusement, and feel free to add some :goonsay: yourself.
+                                </p>
+                                <p>
+                                    If you like or dislike a :goonsay:, vote with the + and - links.
+                                </p> 
+                            </blockquote>
                         </div>
                         {% endblock content %}
                     </div>
